# OptimAI-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
optimai/: __init__.py  config.py  llm_wrapper.py
optimai/decorators/: optimize.py
optimizeai/: __init__.py  config.py  cot.py  llm_wrapper.py  pdf_utils.py
optimizeai/decorators/: optimize.py
optimizeai/providers/: hf_inference.py
