[tool.poetry]
name = "optimai"
version = "0.1.0"
description = ""
authors = ["Vidhu Mathur <vidhumathur2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.3"
openai = "^1.33.0"
python-dotenv = "^1.0.1"
google = "^3.0.0"
huggingface = "^0.0.1"
huggingface-hub = "^0.23.3"
perfwatch = "^1.3.2"
py-context = "^0.3.1"
requests = "^2.32.3"
transformers = "^4.41.2"
google-generativeai = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
