[tool.poetry]
name = "optimizeai"
version = "0.1.4"
description = "OptimAI is a powerful Python module designed to optimize your code by analyzing its performance and providing actionable suggestions. It leverages a large language model (LLM) to give you detailed insights and recommendations based on the profiling data collected during the execution of your code."
authors = ["Vidhu Mathur <vidhumathur2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.3"
openai = "^1.33.0"
python-dotenv = "^1.0.1"
google = "^3.0.0"
huggingface = "^0.0.1"
huggingface-hub = "^0.23.3"
perfwatch = "^1.3.2"
py-context = "^0.3.1"
requests = "^2.32.3"
transformers = "^4.41.2"
google-generativeai = "^0.6.0"
dspy = "^0.1.5"
anthropic = "^0.28.1"
torch = "^2.3.1"
accelerate = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
